--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-VERSION=`grep version Dockerfile | cut -d= -f 2 | tr -d \"`
+VERSION=`grep org.opencontainers.image.version Dockerfile | cut -d= -f 2 | tr -d \"`
 NAME=thomo/j6-ant
 
 docker build -t ${NAME}:${VERSION} -t ${NAME} .
