--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -14,7 +14,10 @@ jobs:
         uses: actions/checkout@v4
       
       - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}  
       
       - name: install buildx
         id: buildx
