--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -37,4 +37,4 @@ jobs:
           docker buildx build --push \
             --tag thomo/j6-ant:${{ steps.read_property.outputs.value }} \
             --tag thomo/j6-ant:latest \
-            --platform linux/amd64,linux/arm64 .
+            --platform linux/amd64 .
